--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <meta property="og:title" content="LUXE - Luxury E-Commerce Experience" />
     <meta property="og:description" content="Experience the epitome of elegance with our curated collection of premium products designed for luxury enthusiasts." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
