--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <meta name="author" content="LUXE" />
     <meta name="keywords" content="luxury, premium, e-commerce, high-end, authentic, craftsmanship, elegance" />
 
+   <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
     <meta property="og:title" content="LUXE - Luxury E-Commerce Experience" />
     <meta property="og:description" content="Experience the epitome of elegance with our curated collection of premium products designed for luxury enthusiasts." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.png" />
-
+    <meta property="og:image" content="favicon.png" />
+     <meta property="og:image" content="https://luxe-voyage.vercel.app/favicon.png" />
+    <meta property="og:url" content="https://luxe-voyage.vercel.app/" />
   </head>
 
   <body>
